# datrie

./: .gitignore  CHANGES.rst  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-wheels.yml  wheel.yml
libdatrie/debian/: changelog  control
libdatrie/debian/tests/: control
