[metadata]
name = datrie
version = 0.8.2
description = Super-fast, efficiently stored Trie for Python.
long_description = file: README.rst, CHANGES.rst
author = mihashi0wang
author_email = stc6895@hotmail.com
url = https://github.com/mihashi0wang/datrie
license = LGPLv2.1
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Text Processing :: Linguistic

[options]
python_requires = >=3.10
setup_requires =
    pytest-runner
    Cython>=3.0
install_requires =
    pytest
    hypothesis

[options.extras_require]
test =
    pytest
    hypothesis

[options.package_data]
datrie = *.pxd

[build_ext]
include_dirs = libdatrie